--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.css">
 
+    <link rel="icon" href="images/logo.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
+
     <title>WhoStory</title>
 </head>
 
