--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/main.css">
-
+    <meta name="title" content="WhoStory" />
+    <meta name="description" content="3 letters, 3 stories, and there is another one happening between you." />
+    <link rel="image_src" href="images/logo.ico" type="image/png"/>
     <link rel="icon" href="images/logo.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/main.css">
+    
     <title>WhoStory</title>
 </head>
 
@@ -38,10 +41,10 @@
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link flag" href="#zh-TW" data-reload>&#127481;&#127484;</a>
+                    <a class="nav-link flag zh-TW" href="#zh-TW">&#127481;&#127484;</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link flag" href="#en" data-reload>&#127482;&#127474;</a>
+                    <a class="nav-link flag en" href="#en">&#127482;&#127474;</a>
                 </li>
                 <li class="nav-item">
                     <a id="text-about" class="nav-link not-flag" href="#footer">About</a>
