Jimmy Yuan_mobile_zh_v2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.css">
-    
+
     <title>WhoStory</title>
 </head>
 
@@ -137,7 +137,7 @@
                                 <h4 class="text-uppercase text-primary rotate-20"><span class="seal">&nbsp; Priceless &nbsp;</span></h4>
                             </div>
                         </div>
-                        <div class="card hidden-sm-down">
+                        <div class="card">
                             <div class="card-block">
                                 <h4 class="card-title">10 days messages reserved</h4>
                                 <p class="card-text">Have more time to consider if you want to become friend with your pen pal. In case you forget to add friend in time.</p>
