Jimmy Yuan_zh-TW_without_reload

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <meta name="title" content="WhoStory" />
     <meta name="description" content="3 letters, 3 stories, and there is another one happening between you." />
-    <link rel="image_src" href="images/logo.ico" type="image/png"/>
+    <meta itemprop="image" content="images/logo.png" />
+    <meta property="og:image" content="images/logo.png" />
+    <link rel="image_src" href="images/logo.png" type="image/png"/>
     <link rel="icon" href="images/logo.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
 
@@ -44,7 +46,7 @@
                     <a class="nav-link flag zh-TW" href="#zh-TW">&#127481;&#127484;</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link flag en" href="#en">&#127482;&#127474;</a>
+                    <a class="nav-link flag en onload" href="#en">&#127482;&#127474;</a>
                 </li>
                 <li class="nav-item">
                     <a id="text-about" class="nav-link not-flag" href="#footer">About</a>
