chia-hung_Google_Analytics

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <meta name="description" content="3 letters, 3 stories, and there is another one happening between you." />
     <meta itemprop="image" content="images/logo.png" />
     <meta property="og:image" content="images/logo.png" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113789622-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-113789622-2');
+    </script>
+
     <link rel="image_src" href="images/logo.png" type="image/png"/>
     <link rel="icon" href="images/logo.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
