--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'UA-113789622-2');
     </script>
 
-    <link rel="image_src" href="images/logo.png" type="image/png"/>
-    <link rel="icon" href="images/logo.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
+    <link rel="image_src" href="images/LOGO/WhoStory_Icon_Main.png" type="image/png"/>
+    <link rel="icon" href="images/LOGO/WhoStory_Icon_Main.png" type="image/png" />
+    <link rel="shortcut icon" href="images/LOGO/WhoStory_Icon_Main.png" type="image/png" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -35,10 +34,10 @@
 <body data-spy="scroll" data-target="#nav">
 
     <nav class="navbar fixed-top navbar-toggleable navbar-inverse bg-inverse">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button id="navbar-icon" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#"><span class="navbar-logo">WhoStory</span></a>
+        <a id="whostory" class="navbar-brand" href="#"><img id="logo" src="images/LOGO/WhoStory_Icon_Main.png"><span class="navbar-logo">&nbsp;&nbsp;WhoStory</span></a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul id="nav" class="navbar-nav mr-auto">
                 <li class="nav-item">
@@ -53,10 +52,10 @@
 
             </ul>
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
                     <a class="nav-link flag zh-TW" href="#zh-TW">&#127481;&#127484;</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
                     <a class="nav-link flag en onload" href="#en">&#127482;&#127474;</a>
                 </li>
                 <li class="nav-item">
@@ -73,7 +72,7 @@
                 <h1 class="display-4 banner-text">WhoStory</h1>
                 <h2 id="text-slogan" class="lead banner-text">3 letters, 3 stories, and there is another one happening between you.</h2>
                 <br>
-                <a class="btn btn-success btn-lg" href="https://forms.gle/fcP8QMm68zHsdjRw9" target="_blank"><i class="fas fa-bullhorn"></i>&nbsp;&nbsp;Get Notified When Available</a>
+                <a id="notification" class="btn btn-success btn-lg" href="https://forms.gle/fcP8QMm68zHsdjRw9" target="_blank"><i class="fas fa-bullhorn"></i>&nbsp;&nbsp;Get Notified When Available</a>
             </div>
             <h2 class="banner-text">
                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
@@ -86,15 +85,15 @@
             <div class="col col-lg-8">
                 <section id="why-section">
                     <h2 id="why" class="display-4 navbar-offset">Why?</h2>
-                    <p>"I'm gonna wait 'till the midnight hour. That's when my love come tumbling down." There is a personal story in our mind, and it might make us feel frustrated, lonely, delighted or excited. At that moment, perhaps we just want to talk to someone anonymously...<br>This is why we build a new app for you:</p>
-                    <p class="lead"><span class="logo">WhoStory</span>, another chance for you, to share your story to someone you never met.</p>
+                    <p id="why-content">"I'm gonna wait 'till the midnight hour. That's when my love come tumbling down." There is a personal story in our mind, and it might make us feel frustrated, lonely, delighted or excited. At that moment, perhaps we just want to talk to someone anonymously...<br>This is why we build a new app for you:</p>
+                    <p id="why-content-2" class="lead"><span class="logo">WhoStory</span>, another chance for you, to share your story to someone you never met.</p>
                 </section>
 
                 <section id="feature-section">
                     <h2 id="feature" class="navbar-offset display-4">Features</h2>
 
                     <div class="row flex-sm-row-reverse justify-content-center align-items-center">
-                        <p class="col-12 col-sm-6 col-md-7">
+                        <p id="step1" class="col-12 col-sm-6 col-md-7">
                             STEP 1:<br>3 letters / day. You have 3 chances to send letters to someone you never met.
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
@@ -103,7 +102,7 @@
                     </div>
 
                     <div class="row justify-content-center align-items-center">
-                        <p class="col-12 col-sm-6 col-md-7">
+                        <p id="step2" class="col-12 col-sm-6 col-md-7">
                             STEP 2:<br>Set up to 3 filters, and you will receive 3 letters based on your expectations.
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
@@ -112,7 +111,7 @@
                     </div>
 
                     <div class="row flex-sm-row-reverse justify-content-center align-items-center">
-                        <p class="col-12 col-sm-6 col-md-7">
+                        <p id="step3" class="col-12 col-sm-6 col-md-7">
                             STEP 3:<br>Choose the letter you are interested in, and reply. You can reply all or none of them. It doesn't matter.
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
@@ -121,7 +120,7 @@
                     </div>
 
                     <div class="row justify-content-center align-items-center">
-                        <p class="col-12 col-sm-6 col-md-7">
+                        <p id="step4" class="col-12 col-sm-6 col-md-7">
                             STEP 4:<br>Chat anonymously for 5 days. Under this mode, you won't know each other.
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
@@ -130,7 +129,7 @@
                     </div>
 
                     <div class="row flex-sm-row-reverse justify-content-center align-items-center">
-                        <p class="col-12 col-sm-6 col-md-7">
+                        <p id="step5" class="col-12 col-sm-6 col-md-7">
                             FINAL STEP:<br>Decide weather you want to send a friend request in 5 days. If you become friends, you can continue chatting and see profiles of each other. Otherwise all messages will be deleted and you will meet her/him again.
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
@@ -141,26 +140,26 @@
 
                 <section id="price-section">
                     <h2 id="price" class="navbar-offset display-4"><span class="logo">WhoStory Plus+</span></h2>
-                    <p><strong>$0.99 / month</strong> &mdash; after downloading <span class="logo">WhoStory</span> from Apple App Store or Google Play, you can decide weather you want to pay for <span class="logo">WhoStory Plus+</span>. Once you buy it, you can send 30 letters everyday, and you are able to set as many filters as you want. Last but not least, your messages will be reserve for 5 more days, which means you will have more time to decide if you want to become friends with the pen pal. Trust us, it's worthy!</p>
+                    <p id="price-content"><strong>$0.99 / month</strong> &mdash; after downloading <span class="logo">WhoStory</span> from Apple App Store or Google Play, you can decide weather you want to pay for <span class="logo">WhoStory Plus+</span>. Once you buy it, you can send 30 letters everyday, and you are able to set as many filters as you want. Last but not least, your messages will be reserve for 5 more days, which means you will have more time to decide if you want to become friends with the pen pal. Trust us, it's worthy!</p>
                     <div class="card-group">
                         <div class="card">
                             <div class="card-block">
-                                <h4 class="card-title">30 letters / day<br>&nbsp;</h4>
-                                <p class="card-text">10 times chance to send messages. You can share your stories with more people! Higher chance to find people with common interest.</p>
+                                <h4 id="price-feature-1-head" class="card-title">30 letters / day<br>&nbsp;</h4>
+                                <p id="price-feature-1" class="card-text">10 times chance to send messages. You can share your stories with more people! Higher chance to find people with common interest.</p>
                                 <h4 class="text-uppercase text-primary rotate-20"><span class="seal">&nbsp; Priceless &nbsp;</span></h4>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-block">
-                                <h4 class="card-title">10 days messages reserved</h4>
-                                <p class="card-text">Have more time to consider if you want to become friend with your pen pal. In case you forget to add friend in time.</p>
+                                <h4 id="price-feature-2-head" class="card-title">10 days messages reserved</h4>
+                                <p id="price-feature-2" class="card-text">Have more time to consider if you want to become friend with your pen pal. In case you forget to add friend in time.</p>
                                 <h4 class="text-uppercase text-primary rotate-340"><span class="seal">&nbsp; Priceless &nbsp;</span></h4>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-block">
-                                <h4 class="card-title">Set all filters<br>&nbsp;</h4>
-                                <p class="card-text">Receive anonymous messages more precisely. It is easier for you to find someone you're interested in or with common interest.</p>
+                                <h4 id="price-feature-3-head" class="card-title">Set all filters<br>&nbsp;</h4>
+                                <p id="price-feature-3" class="card-text">Receive anonymous messages more precisely. It is easier for you to find someone you're interested in or with common interest.</p>
                                 <h4 class="text-uppercase text-primary rotate-350 mx-2"><span class="seal">&nbsp; Priceless &nbsp;</span></h4>
                             </div>
                         </div>
@@ -169,7 +168,7 @@
 
                 <section id="early-bird-section">
                     <h2 id="text-early-bird" class="display-4">Early Bird</h2>
-                    <p>Please help us improve by taking a 30sec survey. Your feedback is highly appreciated, and, to express our thankfulness, we will send you notification once <span class="logo">WhoStory</span> is available. Therefore, you will have chance to become the <strong>first user</strong>. It is exciting! Isn't it?</p>
+                    <p id="early-bird-content">Please help us improve by taking a 30sec survey. Your feedback is highly appreciated, and, to express our thankfulness, we will send you notification once <span class="logo">WhoStory</span> is available. Therefore, you will have chance to become the <strong>first user</strong>. It is exciting! Isn't it?</p>
                     <br>
                     <a class="btn btn-success btn-lg" href="https://forms.gle/fcP8QMm68zHsdjRw9" target="_blank"><i class="fa fa-thumbs-up" aria-hidden="true"></i>&nbsp;&nbsp;Ok, I'd Like to Help</a>
                 </section>
@@ -181,7 +180,7 @@
         <section id="footer-section">
             <h2 id="about" class="text-center">About</h2>
         </section>
-        <p id="text-footer" class="text-center">We are enthusiastic students from National Tsing Hua University, who believe software can make the world a little bit better.</p>
+        <p id="text-footer" class="text-center">We are enthusiastic students from National Tsing Hua University, who believe software can make the world a little bit better.<br>Having questions? We love to help! Drop us an email at <a href="chyuan@datalab.cs.nthu.edu.tw">chyuan@datalab.cs.nthu.edu.tw</a>. We will get back to you as soon as possible.</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
