chia-hung_v_logo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <meta name="title" content="WhoStory" />
     <meta name="description" content="3 letters, 3 stories, and there is another one happening between you." />
-    <meta itemprop="image" content="images/logo.png" />
-    <meta property="og:image" content="images/logo.png" />
+    <meta itemprop="image" content="images/LOGO/WhoStory_Icon_Main.png" />
+    <meta property="og:image" content="images/LOGO/WhoStory_Icon_Main.png" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113789622-2"></script>
