--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         gtag('config', 'UA-113789622-2');
     </script>
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5K48QJ2');</script>
+    <!-- End Google Tag Manager -->
+
     <link rel="image_src" href="images/LOGO/WhoStory_Icon_Main.png" type="image/png"/>
     <link rel="icon" href="images/LOGO/WhoStory_Icon_Main.png" type="image/png" />
     <link rel="shortcut icon" href="images/LOGO/WhoStory_Icon_Main.png" type="image/png" />
@@ -32,6 +40,10 @@
 </head>
 
 <body data-spy="scroll" data-target="#nav">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5K48QJ2"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <nav class="navbar fixed-top navbar-toggleable navbar-inverse bg-inverse">
         <button id="navbar-icon" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
