--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                     <div class="row flex-sm-row-reverse justify-content-center align-items-center">
                         <p id="step5" class="col-12 col-sm-6 col-md-7">
-                            FINAL STEP:<br>Decide weather you want to send a friend request in 5 days. If you become friends, you can continue chatting and see profiles of each other. Otherwise all messages will be deleted and you will meet her/him again.
+                            FINAL STEP:<br>Decide whether you want to send a friend request in 5 days. If you become friends, you can continue chatting and see profiles of each other. Otherwise all messages will be deleted and you will meet her/him again.
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
                             <img class="img-fluid" src="images/Now or Never.png">
@@ -153,7 +153,7 @@
 
                 <section id="price-section">
                     <h2 id="price" class="navbar-offset display-4"><span class="logo">WhoStory Plus+</span></h2>
-                    <p id="price-content"><strong>$0.99 / month</strong> &mdash; after downloading <span class="logo">WhoStory</span> from Apple App Store or Google Play, you can decide weather you want to pay for <span class="logo">WhoStory Plus+</span>. Once you buy it, you can send 30 letters everyday, and you are able to set as many filters as you want. Last but not least, your messages will be reserve for 5 more days, which means you will have more time to decide if you want to become friends with the pen pal. Trust us, it's worthy!</p>
+                    <p id="price-content"><strong>$0.99 / month</strong> &mdash; after downloading <span class="logo">WhoStory</span> from Apple App Store or Google Play, you can decide whether you want to pay for <span class="logo">WhoStory Plus+</span>. Once you buy it, you can send 30 letters everyday, and you are able to set as many filters as you want. Last but not least, your messages will be reserve for 5 more days, which means you will have more time to decide if you want to become friends with the pen pal. Trust us, it's worthy!</p>
                     <div class="card-group">
                         <div class="card">
                             <div class="card-block">
