--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-                    <a class="nav-link flag zh-TW" href="#zh-TW">&#127481;&#127484;</a>
+                    <a class="nav-link flag zh-TW onload" href="#zh-TW">&#127481;&#127484;</a>
                 </li>
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-                    <a class="nav-link flag en onload" href="#en">&#127482;&#127474;</a>
+                    <a class="nav-link flag en" href="#en">&#127482;&#127474;</a>
                 </li>
                 <li class="nav-item">
                     <a id="text-about" class="nav-link not-flag" href="#footer">About</a>
