--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div></div>
             <div>
                 <h1 class="display-4 banner-text">WhoStory</h1>
-                <h2 id="text-slogan" class="lead banner-text">3 letters, 3 stories, and there is another one happening between you.</h2>
+                <h2 id="text-slogan" class="lead banner-text">3 letters, 3 stories, and there is another one going to happen...</h2>
                 <br>
                 <a id="notification" class="btn btn-success btn-lg" href="https://forms.gle/fcP8QMm68zHsdjRw9" target="_blank"><i class="fas fa-bullhorn"></i>&nbsp;&nbsp;Get Notified When Available</a>
             </div>
@@ -99,7 +99,7 @@
                 <section id="why-section">
                     <h2 id="why" class="display-4 navbar-offset">Why?</h2>
                     <p id="why-content">"I'm gonna wait 'till the midnight hour. That's when my love come tumbling down." There is a personal story in our mind, and it might make us feel frustrated, lonely, delighted or excited. At that moment, perhaps we just want to talk to someone anonymously...<br>This is why we build a new app for you:</p>
-                    <p id="why-content-2" class="lead"><span class="logo">WhoStory</span>, another chance for you, to share your story to someone you never met.</p>
+                    <p id="why-content-2" class="lead"><span class="logo">WhoStory</span>, another chance for you, to share your story to someone you have never met.</p>
                 </section>
 
                 <section id="feature-section">
@@ -107,7 +107,7 @@
 
                     <div class="row flex-sm-row-reverse justify-content-center align-items-center">
                         <p id="step1" class="col-12 col-sm-6 col-md-7">
-                            STEP 1:<br>3 letters / day. You have 3 chances to send letters to someone you never met.
+                            STEP 1: SEND LETTERS<br><br>3 letters / day. You have 3 chances to send letters to someone you have never met.
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
                             <img class="img-fluid" src="images/Send Message.png">
@@ -116,44 +116,44 @@
 
                     <div class="row justify-content-center align-items-center">
                         <p id="step2" class="col-12 col-sm-6 col-md-7">
-                            STEP 2:<br>Set up to 3 filters, and you will receive 3 letters based on your expectations.
-                        </p>
-                        <div class="col-8 col-sm-6 col-md-5">
-                            <img class="img-fluid" src="images/Set Filter.png">
-                        </div>
-                    </div>
-
-                    <div class="row flex-sm-row-reverse justify-content-center align-items-center">
-                        <p id="step3" class="col-12 col-sm-6 col-md-7">
-                            STEP 3:<br>Choose the letter you are interested in, and reply. You can reply all or none of them. It doesn't matter.
+                            STEP 2: RECEIVE LETTERS<br><br>Choose the letter you are interested in, and reply. You can reply all or none of them. It doesn't matter.
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
                             <img class="img-fluid" src="images/Receive Message.png">
                         </div>
                     </div>
 
-                    <div class="row justify-content-center align-items-center">
-                        <p id="step4" class="col-12 col-sm-6 col-md-7">
-                            STEP 4:<br>Chat anonymously for 5 days. Under this mode, you won't know each other.
+                    <div class="row flex-sm-row-reverse justify-content-center align-items-center">
+                        <p id="step3" class="col-12 col-sm-6 col-md-7">
+                            STEP 3: CHAT ANONYMOUSLY<br><br>Chat anonymously for 5 days. Under this mode, you won't know each other.
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
                             <img class="img-fluid" src="images/Chat and Send Friend Request.png">
                         </div>
                     </div>
 
-                    <div class="row flex-sm-row-reverse justify-content-center align-items-center">
-                        <p id="step5" class="col-12 col-sm-6 col-md-7">
-                            FINAL STEP:<br>Decide whether you want to send a friend request in 5 days. If you become friends, you can continue chatting and see profiles of each other. Otherwise all messages will be deleted and you will meet her/him again.
+                    <div class="row justify-content-center align-items-center">
+                        <p id="step4" class="col-12 col-sm-6 col-md-7">
+                            FINAL STEP: DECIDE NEXT STEP<br><br>Decide whether you want to send a friend request in 5 days. If you become friends, you can continue chatting and see profiles of each other. Otherwise all messages will be deleted and you will meet her/him again.
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
                             <img class="img-fluid" src="images/Now or Never.png">
+                        </div>
+                    </div>
+
+                    <div class="row flex-sm-row-reverse justify-content-center align-items-center">
+                        <p id="step5" class="col-12 col-sm-6 col-md-7">
+                            WHAT'S MORE...<br><br>Set up to 3 filters, and you will receive 3 letters based on your expectations.
+                        </p>
+                        <div class="col-8 col-sm-6 col-md-5">
+                            <img class="img-fluid" src="images/Set Filter.png">
                         </div>
                     </div>
                 </section>
 
                 <section id="price-section">
                     <h2 id="price" class="navbar-offset display-4"><span class="logo">WhoStory Plus+</span></h2>
-                    <p id="price-content"><strong>$0.99 / month</strong> &mdash; after downloading <span class="logo">WhoStory</span> from Apple App Store or Google Play, you can decide whether you want to pay for <span class="logo">WhoStory Plus+</span>. Once you buy it, you can send 30 letters everyday, and you are able to set as many filters as you want. Last but not least, your messages will be reserve for 5 more days, which means you will have more time to decide if you want to become friends with the pen pal. Trust us, it's worthy!</p>
+                    <p id="price-content"><strong>$0.99 / month</strong> &mdash; after downloading <span class="logo">WhoStory</span> from Apple App Store or Google Play, you can decide whether you want to pay for <span class="logo">WhoStory Plus+</span>. Once you buy it, you can send 30 letters everyday, and you are able to set as many filters as you want. Last but not least, your messages will be reserved for 5 more days, which means you will have more time to decide if you want to become friends with the pen pal. Trust us, it's worthy!</p>
                     <div class="card-group">
                         <div class="card">
                             <div class="card-block">
