--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul id="nav" class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a id="text-why" class="nav-link not-flag" href="#why">Why</a>
+                    <a id="text-why" class="nav-link not-flag" href="#why">為什麼 WhyStory</a>
                 </li>
                 <li class="nav-item">
-                    <a id="text-feature" class="nav-link not-flag" href="#feature">Features</a>
+                    <a id="text-feature" class="nav-link not-flag" href="#feature">產品特色</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link not-flag" href="#price">WhoStory Plus+</a>
@@ -72,7 +72,7 @@
                     <a class="nav-link flag en" href="#en">&#127482;&#127474;</a>
                 </li>
                 <li class="nav-item">
-                    <a id="text-about" class="nav-link not-flag" href="#footer">About</a>
+                    <a id="text-about" class="nav-link not-flag" href="#footer">關於我們</a>
                 </li>
             </ul>
         </div>
@@ -82,10 +82,10 @@
         <div id="banner-fg" class="d-flex flex-column  justify-content-between">
             <div></div>
             <div>
-                <h1 class="display-4 banner-text">WhoStory</h1>
-                <h2 id="text-slogan" class="lead banner-text">3 letters, 3 stories, and there is another one going to happen...</h2>
+                <h1 id="title-loading-page" class="display-4 banner-text">WhoStory</h1>
+                <h2 id="text-slogan" class="lead banner-text">三封信、三則故事，屬於你的人生漂書站。</h2>
                 <br>
-                <a id="notification" class="btn btn-success btn-lg" href="https://forms.gle/fcP8QMm68zHsdjRw9" target="_blank"><i class="fas fa-bullhorn"></i>&nbsp;&nbsp;Get Notified When Available</a>
+                <a id="notification" class="btn btn-success btn-lg" href="https://forms.gle/fcP8QMm68zHsdjRw9" target="_blank"><i class="fas fa-bullhorn"></i>&nbsp;&nbsp;app上線時請通知我</a>
             </div>
             <h2 class="banner-text">
                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
@@ -95,19 +95,19 @@
 
     <div class="container text-center">
         <div class="row justify-content-center">
-            <div class="col col-lg-8">
+            <div class="col-10 col-lg-8">
                 <section id="why-section">
-                    <h2 id="why" class="display-4 navbar-offset">Why?</h2>
-                    <p id="why-content">"I'm gonna wait 'till the midnight hour. That's when my love come tumbling down." There is a personal story in our mind, and it might make us feel frustrated, lonely, delighted or excited. At that moment, perhaps we just want to talk to someone anonymously...<br>This is why we build a new app for you:</p>
-                    <p id="why-content-2" class="lead"><span class="logo">WhoStory</span>, another chance for you, to share your story to someone you have never met.</p>
+                    <h2 id="why" class="display-4 navbar-offset">為什麼 <span class="logo">WhoStory</span></h2>
+                    <p id="why-content">每個人的心中，都有屬於自己的故事，這些故事有的可能會讓你感到挫折、寂寞，有的可能會使你感到高興或是興奮。當某個時候這些故事壓的你喘不過氣了，你可能會希望有個人能聽你講這些故事、替你分擔情緒，但同時你希望能跟不認識的人去分享，因為有時跟一位萍水相逢的人聊天，你反而能暢所欲言、抒發你內心真正的情感，不必擔心未來還需要持續相處而有所保留。</p>
+                    <p id="why-content-2" class="lead">這就是為什麼我們要開發 <span class="logo">WhoStory</span> ，一款全新的筆友app給你!</p>
                 </section>
 
                 <section id="feature-section">
-                    <h2 id="feature" class="navbar-offset display-4">Features</h2>
+                    <h2 id="feature" class="navbar-offset display-4">產品特色</h2>
 
                     <div class="row flex-sm-row-reverse justify-content-center align-items-center">
                         <p id="step1" class="col-12 col-sm-6 col-md-7">
-                            STEP 1: SEND LETTERS<br><br>3 letters / day. You have 3 chances to send letters to someone you have never met.
+                            STEP 1: 寫信<br><br>每天有三封信的機會，能夠和三位你不曾遇過的人，分享屬於自己的故事。
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
                             <img class="img-fluid" src="images/Send Message.png">
@@ -116,7 +116,7 @@
 
                     <div class="row justify-content-center align-items-center">
                         <p id="step2" class="col-12 col-sm-6 col-md-7">
-                            STEP 2: RECEIVE LETTERS<br><br>Choose the letter you are interested in, and reply. You can reply all or none of them. It doesn't matter.
+                            STEP 2: 收信<br><br>在收到的三封信中，選擇有興趣的故事並回應給你的筆友。當然，你也可以什麼都不選。
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
                             <img class="img-fluid" src="images/Receive Message.png">
@@ -125,7 +125,7 @@
 
                     <div class="row flex-sm-row-reverse justify-content-center align-items-center">
                         <p id="step3" class="col-12 col-sm-6 col-md-7">
-                            STEP 3: CHAT ANONYMOUSLY<br><br>Chat anonymously for 5 days. Under this mode, you won't know each other.
+                            STEP 3: 匿名聊天<br><br>現在你和你的筆友有五天的時間能夠聊著屬於你們的故事，在這期間你們不會知道對方的身份。
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
                             <img class="img-fluid" src="images/Chat and Send Friend Request.png">
@@ -134,7 +134,7 @@
 
                     <div class="row justify-content-center align-items-center">
                         <p id="step4" class="col-12 col-sm-6 col-md-7">
-                            FINAL STEP: DECIDE NEXT STEP<br><br>Decide whether you want to send a friend request in 5 days. If you become friends, you can continue chatting and see profiles of each other. Otherwise all messages will be deleted and you will meet her/him again.
+                            FINAL STEP: 決定下一步<br><br>你們必須在五天內決定是否要送好友邀請給你的筆友。如果成為朋友，你們可以持續跟彼此聊天並得知對方的真實身分。如果沒有在五天內成為朋友，那麼之前所有的聊天記錄將被刪除，未來也沒有機會再遇見對方。
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
                             <img class="img-fluid" src="images/Now or Never.png">
@@ -143,7 +143,7 @@
 
                     <div class="row flex-sm-row-reverse justify-content-center align-items-center">
                         <p id="step5" class="col-12 col-sm-6 col-md-7">
-                            WHAT'S MORE...<br><br>Set up to 3 filters, and you will receive 3 letters based on your expectations.
+                            除此之外。。。<br><br>設置過濾器來接收你希望收到的故事類型，每位使用者每天都會收到三封信。
                         </p>
                         <div class="col-8 col-sm-6 col-md-5">
                             <img class="img-fluid" src="images/Set Filter.png">
@@ -153,26 +153,26 @@
 
                 <section id="price-section">
                     <h2 id="price" class="navbar-offset display-4"><span class="logo">WhoStory Plus+</span></h2>
-                    <p id="price-content"><strong>$0.99 / month</strong> &mdash; after downloading <span class="logo">WhoStory</span> from Apple App Store or Google Play, you can decide whether you want to pay for <span class="logo">WhoStory Plus+</span>. Once you buy it, you can send 30 letters everyday, and you are able to set as many filters as you want. Last but not least, your messages will be reserved for 5 more days, which means you will have more time to decide if you want to become friends with the pen pal. Trust us, it's worthy!</p>
+                    <p id="price-content"><strong>$30 / 月</strong> &mdash; 下載完 <span class="logo">WhoStory</span> 後可以決定是否要付費成為 <span class="logo">WhoStory Plus+</span> 會員。會員享有每天三十封信的機會，而且可以設定不限制數量的過濾器，並且多保留你們的聊天內容五天。也因此，你們將有更多的時間去考慮你是否要跟你的筆友成為朋友！</p>
                     <div class="card-group">
                         <div class="card">
                             <div class="card-block">
-                                <h4 id="price-feature-1-head" class="card-title">30 letters / day<br>&nbsp;</h4>
-                                <p id="price-feature-1" class="card-text">10 times chance to send messages. You can share your stories with more people! Higher chance to find people with common interest.</p>
+                                <h4 id="price-feature-1-head" class="card-title">30封信 / 日<br>&nbsp;</h4>
+                                <p id="price-feature-1" class="card-text">10倍的機會能夠分享更多的故事給其他人，有更多的機會找到對你的故事有興趣的人。</p>
                                 <h4 class="text-uppercase text-primary rotate-20"><span class="seal">&nbsp; Priceless &nbsp;</span></h4>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-block">
-                                <h4 id="price-feature-2-head" class="card-title">10 days messages reserved</h4>
-                                <p id="price-feature-2" class="card-text">Have more time to consider if you want to become friend with your pen pal. In case you forget to add friend in time.</p>
+                                <h4 id="price-feature-2-head" class="card-title">10天的信件保留<br>&nbsp;</h4>
+                                <p id="price-feature-2" class="card-text">更多的時間去考慮是否和筆友成為朋友，避免忘記或是來不及送邀請的遺憾。</p>
                                 <h4 class="text-uppercase text-primary rotate-340"><span class="seal">&nbsp; Priceless &nbsp;</span></h4>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-block">
-                                <h4 id="price-feature-3-head" class="card-title">Set all filters<br>&nbsp;</h4>
-                                <p id="price-feature-3" class="card-text">Receive anonymous messages more precisely. It is easier for you to find someone you're interested in or with common interest.</p>
+                                <h4 id="price-feature-3-head" class="card-title">設定所有過濾器<br>&nbsp;</h4>
+                                <p id="price-feature-3" class="card-text">設定更精確的過濾器來收到你可能感興趣的故事，讓你更容易找到有同樣心情、故事的筆友。</p>
                                 <h4 class="text-uppercase text-primary rotate-350 mx-2"><span class="seal">&nbsp; Priceless &nbsp;</span></h4>
                             </div>
                         </div>
@@ -180,10 +180,10 @@
                 </section>
 
                 <section id="early-bird-section">
-                    <h2 id="text-early-bird" class="display-4">Early Bird</h2>
-                    <p id="early-bird-content">Please help us improve by taking a 30sec survey. Your feedback is highly appreciated, and, to express our thankfulness, we will send you notification once <span class="logo">WhoStory</span> is available. Therefore, you will have chance to become the <strong>first user</strong>. It is exciting! Isn't it?</p>
+                    <h2 id="text-early-bird" class="display-4">搶先看</h2>
+                    <p id="early-bird-content">請花30秒幫我們填寫一下問卷，我們會仔細審視您的意見，並將您的意見作為我們產品開發的參考，提高產品品質。當產品開發完成後，您將有機會成為 <strong>第一位使用者</strong>。</p>
                     <br>
-                    <a class="btn btn-success btn-lg" href="https://forms.gle/fcP8QMm68zHsdjRw9" target="_blank"><i class="fa fa-thumbs-up" aria-hidden="true"></i>&nbsp;&nbsp;Ok, I'd Like to Help</a>
+                    <a id="notification2" class="btn btn-success btn-lg" href="https://forms.gle/fcP8QMm68zHsdjRw9" target="_blank"><i class="fa fa-thumbs-up" aria-hidden="true"></i>&nbsp;&nbsp;感覺不錯！寫個問卷</a>
                 </section>
             </div>
         </div>
@@ -191,9 +191,9 @@
 
     <footer id="footer" class=".navbar-offset">
         <section id="footer-section">
-            <h2 id="about" class="text-center">About</h2>
+            <h2 id="about" class="text-center">關於我們</h2>
         </section>
-        <p id="text-footer" class="text-center">We are enthusiastic students from National Tsing Hua University, who believe software can make the world a little bit better.<br>Having questions? We love to help! Drop us an email at <a href="chyuan@datalab.cs.nthu.edu.tw">chyuan@datalab.cs.nthu.edu.tw</a>. We will get back to you as soon as possible.</p>
+        <p id="text-footer" class="text-center">我們是一群來自國立清華大學的學生，希望能透過coding讓世界變得更美好！<br>如果您對WhoStory有任何疑問，歡迎來信到<a href="chyuan@datalab.cs.nthu.edu.tw">chyuan@datalab.cs.nthu.edu.tw</a>，我們會盡快回信給您。</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
