--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul id="nav" class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a id="text-why" class="nav-link not-flag" href="#why">為什麼 WhyStory</a>
+                    <a id="text-why" class="nav-link not-flag" href="#why">為什麼 WhoStory</a>
                 </li>
                 <li class="nav-item">
                     <a id="text-feature" class="nav-link not-flag" href="#feature">產品特色</a>
